--- a/assets/css/fuel_override.css
+++ b/assets/css/fuel_override.css
@@ -39,3 +39,5 @@ div.screenshot { position: relative; }
 div.overlay { position: absolute; z-index: 1; background-color: #ffc; font-size: 12px; padding: 5px; -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); }
 
 #content pre.example { margin-bottom: 20px; }
+
+div.func { display: none; }
