--- a/assets/css/fuel_override.css
+++ b/assets/css/fuel_override.css
@@ -4,7 +4,8 @@
 #nav h2 { color: #fff; }
 #nav2 { position: relative; margin-bottom: 10px; padding-right: 0px; background: #000; min-height: 10px; }
 #toc_toggle { display: block; position: absolute; bottom: -15px; right: 38px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4) background-color: #000;  -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);  background: #000;text-align: center; color: #fff; padding: 5px 20px ; font-size: 11px; }
-#nav_inner .td_sep { background: transparent; width: 25%; padding: 0 0 0 20px; border-left: 1px solid #316799; }
+#nav_inner .td_sep { background: transparent; width: 20%; padding: 0 0 0 20px; border-left: 1px solid #316799; }
+#nav_inner .td { width: 20%; }
 /*#content .td { background-color: transparent; padding: 0 20px 0 0;  }*/
 #content .tableborder { width: 100%; }
 #content .toc_table td { background-color: transparent !important; }
@@ -15,6 +16,7 @@
 .toc_table .td_sep { padding-right: 20px; background-color: transparent; }
 .toc_table td { vertical-align: top;  }
 
+#content dfn, #content span.file { font-family: Lucida Grande, Verdana, Geneva, Sans-serif; color: #00620C; font-weight: bold; font-style: normal; }
 
 .clear { clear: both; height: 0; line-height: 0; font-size: 0; }
 .hidden { display: none; }
