--- a/assets/css/fuel_override.css
+++ b/assets/css/fuel_override.css
@@ -3,9 +3,12 @@
 #nav { background: #000 url(http://www.getfuelcms.com/assets/images/bg_waves.jpg) no-repeat top center; margin: 0; padding: 0; } 
 #nav h2 { color: #fff; }
 #nav2 { position: relative; margin-bottom: 10px; padding-right: 0px; background: #000; min-height: 10px; }
+#nav_container { position: fixed; top: 0px; left: 0; min-height: 10px; width: 100%; z-index: 999; opacity: .95 }
+
 #toc_toggle { display: block; position: absolute; bottom: -15px; right: 38px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4) background-color: #000;  -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);  background: #000;text-align: center; color: #fff; padding: 5px 20px ; font-size: 11px; }
 #nav_inner .td_sep { background: transparent; width: 16%; padding: 0 0 0 20px; border-left: 1px solid #316799; }
 #nav_inner .td { width: 16%; }
+#masthead { margin-top: 30px; }
 /*#content .td { background-color: transparent; padding: 0 20px 0 0;  }*/
 #content .tableborder { width: 100%; }
 #content .toc_table td { background-color: transparent !important; }
@@ -27,6 +30,8 @@
 
 .img_left { float: left; margin: 0 15px 15px 0; }
 .img_right { float: right; margin: 0 0 15px 15px; }
+.float_left { float: left; }
+.float_right { float: right; }
 div#content img.screen { display: block; border: 1px solid #ccc; margin: 3px 3px 35px 3px; padding: 3px; -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); }
 
 /* syntax highlighter overwrides*/
@@ -42,4 +47,12 @@ div.overlay { position: absolute; z-index: 1; background-color: #ffc; font-size:
 
 #content pre.example { margin-bottom: 20px; }
 
-div.func { display: none; }
+div.toggle_block { display: none; }
+
+
+.form td { background-color: #fff !important; }
+
+/* CLEAR FIX */
+.clearfix:before, .clearfix:after { content: ""; display: table; }
+.clearfix:after { clear: both; }
+.clearfix { zoom: 1; }
