--- a/assets/css/userguide.css
+++ b/assets/css/userguide.css
@@ -1,4 +1,5 @@
 /* BASE CI STYLES */
+* { outline-style: none; -moz-outline-style: none; -webkit-text-size-adjust: none; }
 body { margin: 0; padding: 0; font-family: Lucida Grande, Verdana, Geneva, Sans-serif; font-size: 14px; color: #333; background-color: #fff; }
 a { color: #0134c5; background-color: transparent; text-decoration: none; } 
 a:visited { color: #0134c5; background-color: transparent; text-decoration: none; } 
@@ -23,7 +24,7 @@ a:hover { color: #000; text-decoration: none; background-color: transparent; }
 #img_welcome { border-bottom: 1px solid #D0D0D0; margin: 0 40px 0 40px; padding: 0; text-align: center; }
 #content { margin: 20px 40px 0 40px; padding: 0; }
 #content p { margin: 0px 20px 20px 0; line-height: 20px; }
-#content h1 { color: #e13300; border-bottom: 1px solid #666; background-color: transparent; font-weight: normal; font-size: 28px; margin: 0 0 20px 0; padding: 3px 0 7px 3px; }
+#content h1 { color: #e13300; border-bottom: 1px solid #666; background-color: transparent; font-weight: normal; font-size: 28px; margin: 0 0 20px 0; padding: 10px 0 7px 3px; }
 #content h2 { background-color: transparent; border-bottom: 1px solid #999; color: #000;  font-size: 18px; font-weight: bold; margin: 25px 0 25px 0; padding: 15px 0 6px 0; }
 #content h3 { background-color: transparent; border-bottom: 1px solid #ddd; color: #333; font-size: 16px; font-weight: bold; margin: 30px 0 5px 0; padding: 5px 0 6px 0; }
 #content h3.noline { border-bottom: none; padding-bottom: 0; }
@@ -40,7 +41,10 @@ a:hover { color: #000; text-decoration: none; background-color: transparent; }
 #content li { margin-bottom: 9px; }
 #content li p { margin-left: 0; margin-right: 0; }
 #content .tableborder { border: 1px solid #999; }
-#content th { font-weight: bold; text-align: left; font-size: 12px; background-color: #666; color: #fff; padding: 4px; }
+#content th { font-weight: bold; text-align: left; font-size: 14px; background-color: #666; color: #fff; padding: 4px; }
+#content td { font-weight: normal; font-size: 12px; padding: 6px; background-color: #f3f3f3; }
+#content td.hdr { background-color: #fafafa; font-weight: bold; font-size: 14px; padding: 10px 4px; }
+#content td pre { background: transparent; border: none; padding: 0; margin: 0; }
 #content .td { font-weight: normal; font-size: 12px; padding: 6px; background-color: #f3f3f3; }
 #content .tdpackage { font-weight: normal; font-size: 12px; }
 #content .important { background: #FBE6F2; border: 1px solid #D893A1; color: #333; margin: 10px 0 5px 0; padding: 10px; }
@@ -60,3 +64,60 @@ form { margin: 0; padding: 0; }
 .select { background-color: #fff; font-size: 11px; font-weight: normal; color: #333; padding: 0; margin: 0 0 3px 0; }
 .checkbox { background-color: transparent; padding: 0; border: 0; }
 .submit { background-color: #000; color: #fff; font-weight: normal; font-size: 10px; border: 1px solid #fff; margin: 0; padding: 1px 5px 2px 5px; }
+
+
+/* FUEL OVERWRITES */
+#fuel_logo { width: 200px; height: 200px; margin: 10px auto 20px auto; display: block; }
+#nav { background: #000 url(http://www.getfuelcms.com/assets/images/bg_waves.jpg) no-repeat top center; margin: 0; padding: 0; } 
+#nav h2 { color: #fff; }
+#nav2 { position: relative; margin-bottom: 10px; padding-right: 0px; background: #000; min-height: 10px; }
+#nav_container { position: fixed; top: 0px; left: 0; min-height: 10px; width: 100%; z-index: 999; opacity: .95 }
+
+#toc_toggle { display: block; position: absolute; bottom: -15px; right: 38px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4) background-color: #000;  -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);  background: #000;text-align: center; color: #fff; padding: 5px 20px ; font-size: 11px; }
+#nav_inner .td_sep { background: transparent; width: 16%; padding: 0 0 0 20px; border-left: 1px solid #316799; }
+#nav_inner .td { width: 16%; }
+#masthead { margin-top: 30px; }
+/*#content .td { background-color: transparent; padding: 0 20px 0 0;  }*/
+#content .tableborder { width: 100%; }
+#content .toc_table td { background-color: transparent !important; }
+.toc_table { width: 98%; margin: auto; }
+.toc_table .td_sep { padding-right: 20px; background-color: transparent; }
+.toc_table td { vertical-align: top;  }
+
+#content dfn, #content span.file { font-family: Lucida Grande, Verdana, Geneva, Sans-serif; color: #00620C; font-weight: bold; font-style: normal; }
+
+.clear { clear: both; height: 0; line-height: 0; font-size: 0; }
+.hidden { display: none; }
+
+.success { background-color: #6ec461; background-repeat: no-repeat; padding: 2px 5px; color: #fff; }
+.warning { background-color: #ff1; background-repeat: no-repeat; }
+.error { background-color: #c30; background-repeat: no-repeat; padding: 2px 5px; color: #fff; }
+
+.img_left { float: left; margin: 0 15px 15px 0; }
+.img_right { float: right; margin: 0 0 15px 15px; }
+.float_left { float: left; }
+.float_right { float: right; }
+div#content img.screen { display: block; border: 1px solid #ccc; margin: 3px 3px 35px 3px; padding: 3px; -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); }
+
+/* syntax highlighter overwrides*/
+div.syntaxhighlighter { background-color: #fcfcfc !important; border: 1px solid #ddd !important; padding: 5px !important; }
+div.syntaxhighlighter code { display: inline !important; }
+div.syntaxhighlighter .bar .toolbar { border-top: none !important; border-right: none !important; }
+div.syntaxhighlighter .line.alt1 { background-color: #fcfcfc !important; }
+div.syntaxhighlighter .line.alt2 { background-color: #fcfcfc !important; }
+
+/* screenshot overlays */
+div.screenshot { position: relative; }
+div.overlay { position: absolute; z-index: 1; background-color: #ffc; font-size: 12px; padding: 5px; -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); }
+
+#content pre.example { margin-bottom: 20px; }
+
+div.toggle_block { display: none; }
+
+
+.form td { background-color: #fff !important; }
+
+/* CLEAR FIX */
+.clearfix:before, .clearfix:after { content: ""; display: table; }
+.clearfix:after { clear: both; }
+.clearfix { zoom: 1; }
