--- a/assets/css/userguide.css
+++ b/assets/css/userguide.css
@@ -7,10 +7,9 @@ a:hover { color: #000; text-decoration: none; background-color: transparent; }
 #breadcrumb { float: left; background-color: transparent; margin: 10px 0 0 42px; padding: 0; font-size: 10px; color: #666; }
 #breadcrumb_right { float: right; width: 175px; background-color: transparent; padding: 8px 8px 3px 0; text-align: right; font-size: 10px; color: #666; }
 #nav { background-color: #494949; margin: 0; padding: 0; } 
-#nav2 { background: #fff url(../images/nav_bg_darker.jpg) repeat-x left top; padding: 0 310px 0 0; margin: 0; text-align: right; }
 #nav_inner { background-color: transparent; padding: 8px 12px 0 20px; margin: 0; font-family: Lucida Grande, Verdana, Geneva, Sans-serif; font-size: 11px; }
 #nav_inner h3 { font-size: 12px; color: #fff; margin: 0; padding: 0; }
-#nav_inner .td_sep { background: transparent url(../images/nav_separator_darker.jpg) repeat-y left top; width: 25%; padding: 0 0 0 20px; }
+#nav_inner .td_sep { background: transparent; width: 16%; padding: 0 0 0 20px; border-left: 1px solid #444; }
 #nav_inner .td { width: 25%; }
 #nav_inner p { color: #eee; background-color: transparent; padding:0; margin: 0 0 10px 0; }
 #nav_inner ul { list-style-image: url(../images/arrow.gif); padding: 0 0 0 18px; margin: 5px 0 12px 0; }
@@ -68,13 +67,16 @@ form { margin: 0; padding: 0; }
 
 /* FUEL OVERWRITES */
 #fuel_logo { width: 200px; height: 200px; margin: 10px auto 20px auto; display: block; }
-#nav { background: #000 url(../images/bg_waves.jpg) no-repeat top center; margin: 0; padding: 0; } 
+#nav { background: #000 url(../images/bg_waves.jpg) no-repeat top center; margin: 0; padding: 0;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #333), color-stop(1, #000));
+	background: -moz-linear-gradient(top center, #333 0%, #000 100%);
+	
+	 } 
 #nav h2 { color: #fff; }
 #nav2 { position: relative; margin-bottom: 10px; padding-right: 0px; background: #000; min-height: 10px; }
 #nav_container { position: fixed; top: 0px; left: 0; min-height: 10px; width: 100%; z-index: 999; opacity: .95 }
 
 #toc_toggle { display: block; position: absolute; bottom: -15px; right: 38px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4) background-color: #000;  -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);  background: #000;text-align: center; color: #fff; padding: 5px 20px ; font-size: 11px; }
-#nav_inner .td_sep { background: transparent; width: 16%; padding: 0 0 0 20px; border-left: 1px solid #316799; }
 #nav_inner .td { width: 16%; }
 #masthead { margin-top: 30px; }
 /*#content .td { background-color: transparent; padding: 0 20px 0 0;  }*/
