--- a/assets/css/userguide.css
+++ b/assets/css/userguide.css
@@ -4,7 +4,7 @@ body { margin: 0; padding: 0; font-family: Lucida Grande, Verdana, Geneva, Sans-
 a { color: #0134c5; background-color: transparent; text-decoration: none; } 
 a:visited { color: #0134c5; background-color: transparent; text-decoration: none; } 
 a:hover { color: #000; text-decoration: none; background-color: transparent; }
-#breadcrumb { float: left; background-color: transparent; margin: 10px 0 0 42px; padding: 0; font-size: 10px; color: #666; }
+#breadcrumb { background-color: transparent; padding: 10px 0 0 42px; font-size: 10px; color: #666; }
 #breadcrumb_right { float: right; width: 175px; background-color: transparent; padding: 8px 8px 3px 0; text-align: right; font-size: 10px; color: #666; }
 #nav { background-color: #494949; margin: 0; padding: 0; } 
 #nav_inner { background-color: transparent; padding: 8px 12px 0 20px; margin: 0; font-family: Lucida Grande, Verdana, Geneva, Sans-serif; font-size: 11px; }
